--- a/20211124.md
+++ b/20211124.md
@@ -67,7 +67,13 @@ HTTP 2.0 프로토콜 : 바이너리 포맷으로 인코딩된 Message, Frame으
 허프만 코드를 이용하는 HPACK 알고리즘을 이용하고 중복 내용의 반복 비율이 높을 수록 압축 비율은 커짐
 
 **3\. 서버 푸쉬(Server Push)**<br>
-서버 푸쉬 기능을 통해 클라이언트가 요청하지 않은 데이터에 대해 서버가 스스로 전송 해줄 수 있음HTTP 1.1 : main.html의 응답을 먼저 받고 안에 링크되어 있는 style.css, script.js, image.jpg를 추가로 요청함HTTP 2.0 : main.html의 구성요소가 style.css, script.js, image.jpg라고 정의된 경우 main.html의 응답을 전송할 때 3개의 컨텐츠를 같이 전송함
+서버 푸쉬 기능을 통해 클라이언트가 요청하지 않은 데이터에 대해 서버가 스스로 전송 해줄 수 있음
+
+
+HTTP 1.1 : main.html의 응답을 먼저 받고 안에 링크되어 있는 style.css, script.js, image.jpg를 추가로 요청함
+
+
+HTTP 2.0 : main.html의 구성요소가 style.css, script.js, image.jpg라고 정의된 경우 main.html의 응답을 전송할 때 3개의 컨텐츠를 같이 전송함
 
 <br>HTTP 트랜잭션은 기존 4개에서 1개로 RTT가 감소
 
